--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ h1 {
   margin-top: 48px;
   font-family: "Roboto Flex";
   font-weight: 900;
+  text-align: center;
 }
 
 audio {
@@ -101,6 +102,11 @@ button img {
 
 #answer .small {
   font-size: 16px;
+}
+
+#footer {
+  margin-top: auto;
+  padding: 22px;
 }
 
 .hidden {
